# is_odd

./: Cargo.toml  Procfile  README.md  pyproject.toml  wrangler.toml
is_odd/: __init__.py
src/: lib.rs
