[tool.poetry]
name = "is-odd"
version = "0.1.0"
description = "Yep"
authors = ["le ducki3 <qwuakers@gmail.com>"]
license = "The Unlicense"
readme = "README.md"
packages = [{include = "is_odd"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
gunicorn = "*"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
